apps/radarr/06.server-service.yml
apiVersion: v1
kind: Service
metadata:
  name: radarr-service
  namespace: radarr
  labels:
    app: radarr
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 7878
  selector:
    app: radarr-server
