apps/radarr/07.server-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: radarr-ingress
  namespace: radarr
  annotations:
    cert-manager.io/cluster-issuer: "radarr-letsencrypt"
spec:
  tls:
  - hosts:
    - radarr.hectormedina.es
    secretName: radarr-tls-secret
  rules:
  - host: radarr.hectormedina.es
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: radarr-service
            port:
              number: 80
